
syntax = "proto3";

package qrtz_simple_triggers;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

message QrtzSimpleTriggerBean{
    string sched_name=1;
    string trigger_name=2;
    string trigger_group=3;
    int64 repeat_count=4;
    int64 repeat_interval=5;
    int64 times_triggered=6;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service QrtzSimpleTriggerBeanService {
  rpc ListQrtzSimpleTriggerBeans(ListQrtzSimpleTriggerBeansRequest) returns (ListQrtzSimpleTriggerBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/QrtzSimpleTriggerBeans"
    };
  }

  rpc GetQrtzSimpleTriggerBean(GetQrtzSimpleTriggerBeanRequest) returns (QrtzSimpleTriggerBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=QrtzSimpleTriggerBeans/*}"
    };
  }

  rpc CreateQrtzSimpleTriggerBean(CreateQrtzSimpleTriggerBeanRequest) returns (QrtzSimpleTriggerBean) {
    option (google.api.http) = {
      post: "/v1alpha1/QrtzSimpleTriggerBeans"
      body: "QrtzSimpleTriggerBean"
    };
  }

  rpc UpdateQrtzSimpleTriggerBean(UpdateQrtzSimpleTriggerBeanRequest) returns (QrtzSimpleTriggerBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{QrtzSimpleTriggerBean.name=QrtzSimpleTriggerBeans/*}"
      body: "QrtzSimpleTriggerBean"
    };
  }

  rpc DeleteQrtzSimpleTriggerBean(DeleteQrtzSimpleTriggerBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=QrtzSimpleTriggerBeans/*}"
    };
  }
}

// message QrtzSimpleTriggerBean {
// ! This should be defined elsewhere
// }

message ListQrtzSimpleTriggerBeansRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListQrtzSimpleTriggerBeansResponse {
  // The field name should match the noun "QrtzSimpleTriggerBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated QrtzSimpleTriggerBean QrtzSimpleTriggerBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetQrtzSimpleTriggerBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateQrtzSimpleTriggerBeanRequest {
  // The parent resource name where the QrtzSimpleTriggerBean is to be created.
  string parent = 1;

  // The QrtzSimpleTriggerBean id to use for this QrtzSimpleTriggerBean.
  string QrtzSimpleTriggerBean_id = 2;

  // The QrtzSimpleTriggerBean resource to create.
  // The field name should match the Noun in the method name.
  QrtzSimpleTriggerBean QrtzSimpleTriggerBean = 3;
}

message UpdateQrtzSimpleTriggerBeanRequest {
  // The QrtzSimpleTriggerBean resource which replaces the resource on the server.
  QrtzSimpleTriggerBean QrtzSimpleTriggerBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteQrtzSimpleTriggerBeanRequest {
  // The resource name of the QrtzSimpleTriggerBean to be deleted.
  string name = 1;
}
